kubernetes/redash/scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: scheduler
  name: scheduler
  namespace: redash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduler
  strategy: {}
  template:
    metadata:
      labels:
        app: scheduler
    spec:
      containers:
      - args:
        - scheduler
        image: redash/redash:8.0.0.b32245
        imagePullPolicy: ""
        name: scheduler
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
