kubernetes/redash/worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: scheduled-worker
  name: scheduled-worker
  namespace: redash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scheduled-worker
  strategy: {}
  template:
    metadata:
      labels:
        app: scheduled-worker
    spec:
      containers:
      - args:
        - worker
        image: redash/redash:8.0.0.b32245
        imagePullPolicy: ""
        name: scheduled-worker
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: adhoc-worker
  name: adhoc-worker
  namespace: redash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adhoc-worker
  strategy: {}
  template:
    metadata:
      labels:
        app: adhoc-worker
    spec:
      containers:
      - args:
        - worker
        image: redash/redash:8.0.0.b32245
        imagePullPolicy: ""
        name: adhoc-worker
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
