kubernetes/redash/redis-cli.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cli
  namespace: redash
spec:
  selector:
    app: redis-cli
  ports:
  - port: 6379
    targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-cli
  name: redis-cli
  namespace: redash
spec:
  selector:
    matchLabels:
      app: redis-cli
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-cli
    spec:
      containers:
      - image: redis:5.0-alpine
        imagePullPolicy: ""
        name: redis-cli
        command:
          - redis-cli-server
          - "/etc/redis-cli/redis-cli.conf"
        #env:
        #- name: MASTER
        #  value: "true"
        esources: {}
        volumeMounts:
          - name: redis-cli-config
            mountPath: /etc/redis-cli/redis-cli.conf
            subPath: redis-cli.conf
        ports:
        - containerPort: 6379
      restartPolicy: Always
      volumes:
        - name: redis-cli-config
          configMap:
            name: redis-cli-config
