kubernetes/redash/redis.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: redash
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
  namespace: redash
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis:5.0-alpine
        imagePullPolicy: ""
        name: redis
        command:
          - redis-server
          - "/etc/redis/redis.conf"
        esources: {}
        volumeMounts:
          - name: redis-config
            mountPath: /etc/redis/redis.conf
            subPath: redis.conf
        ports:
        - containerPort: 6379
      restartPolicy: Always
      volumes:
        - name: redis-config
          configMap:
            name: redis-config
