kubernetes/redash/server.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: server
  name: server
  namespace: redash
spec:
  ports:
  - name: "5000"
    port: 5000
    targetPort: 5000
  selector:
    app: server
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: server
  name: server
  namespace: redash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  strategy: {}
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - args:
        - server
        image: veknet/redash
#         image: redash/redash:8.0.0.b32245
        imagePullPolicy: ""
        name: server
        tty: true
        stdin: true
        lifecycle:
          postStart:
            exec:
              command:
              - bash
              - -c
              - /app/manage.py database create_tables
        ports:
        - containerPort: 5000
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
